<resources>
    <string name="app_name">PokeQuizApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="generation_select">世代選択</string>
    <string name="question">問題</string>
    <string name="answer">結果発表</string>
    <string name="poke_q">ポケモンクイズ</string>
    <string name="start">スタート</string>
    <string name="select">世代選択</string>
    <string name="genarasion_1">全国図鑑</string>
    <string name="pokemon_id">ポケモンのID</string>
    <string name="display">表示</string>
    <string name="PokemonName">%1$s</string>
    <string name="quizescreen">問題画面</string>
    <string name="generasion2">カントー図鑑（赤・緑・青・ピカチュウ）</string>
    <string name="generasion3">ジョウト図鑑（金・銀・クリスタル）</string>
    <string name="generasion4">ホウエン図鑑（ルビー・サファイア・エメラルド）</string>
    <string name="butonn">Button</string>
    <string name="button">Button</string>
    <string name="button2">Button</string>
    <string name="todo">TODO</string>
    <string name="q_count">%d問目</string>
    <string name="empty">%1$s</string>
    <string name="empty2">%1$s</string>
    <string name="empty3">%1$s</string>
    <string name="empty4">%1$s</string>
    <string name="result">結果発表</string>
    <string name="Generasion_Select">世代選択</string>

    <string name="generasion5">シンオウ図鑑（ダイアモンド・パール・プラチナ）</string>
    <string name="generasion6">イッシュ図鑑（ブラック２・ホワイト２）</string>
    <string name="generasion7">セントラルカロス図鑑（X・Y）</string>
    <string name="generasion8">コーストカロス図鑑（X・Y）</string>
    <string name="generasion9">マウンテンカロス図鑑（X・Y）</string>
    <string name="generasion10">アローラ図鑑（ウルトラサン・ウルトラムーン）</string>
    <string name="generasion11">ガラル図鑑（ソード・シールド）</string>
    <string name="generasion12">ヨロイ島図鑑（ソード・シールド）</string>
    <string name="generasion13">カンムリ雪原図鑑（ソード・シールド）</string>
    <string name="generasion14">ヒスイ図鑑（Pokemon LEGENDS アルセウス）</string>

</resources>